tests/error/enum_errors/bad_variant_field.err
Error: Unexpected field name (at $FILE:6:20)
  | 
4 | @guppy.enum
5 | class MyEnum:
6 |     v1 = {"x": int, "2": str}
  |                     ^^^ Unexpected field name in enum variant definition

Guppy compilation failed due to 1 previous error
